# openai-api-service

./: .woodpecker.yml  README.md  pyproject.toml
docs/: Usage.md
src/: Dockerfile.multiarch  entrypoint.sh  requirements.txt
src/api/: schema.py  setting.py
src/api/models/: azure_openai.py  vertex_ai.py
src/api/routers/: chat.py  embeddings.py  model.py
tests/api/models/: test_vertex_ai.py
