[project]
name = "openai-api-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.37.0",
    "botocore==1.37.0",
    "fastapi==0.115.8",
    "mangum==0.17.0",
    "numpy==1.26.4",
    "openai==1.74.0",
    "pydantic==2.7.1",
    "requests==2.32.3",
    "tiktoken==0.6.0",
    "uvicorn==0.29.0",
]
